added booking modules

--- a/application/static/main.css
+++ b/application/static/main.css
@@ -155,7 +155,7 @@ background-size:cover;
 /*facilities*/
 
 .box-two{
-    background-image: url("images/pool.jpg");
+    background-image: url("images/swimming.jpg");
 }
 .box-three{
     background-image: url("images/gymeqpui.jpg");
