--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -26,7 +26,7 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{url_for('home')}}">
-         <img src="static/images/logo_purefit.jpg" alt="" width="60" height="60" class=" d-none d-md-inline-block align-text-center">
+         <img src="static/images/pf_logo.jpg" alt="" width="60" height="60" class=" d-none d-md-inline-block align-text-center">
       Pure Fitness</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
