--- a/application/templates/policy.html
+++ b/application/templates/policy.html
@@ -9,7 +9,7 @@
 <br>
 <br>
 <h1>The finer details of our policies </h1>
-<button type="button" class="collapsible" style="display:block;" >Club rules</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;" >Club rules</button>
 <div class="collapse">
       <p>All members and guests must comply with these policies. These are incorporated into a Member’s Contract with
         us, and compliance with these policies is important both to maintain the standards and to enable Members to get
@@ -26,7 +26,7 @@
         specified otherwise.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Membership</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Membership</button>
 <div class="collapse">
         <p>Acceptance of an application for Membership is at our absolute discretion (although we will exercise our
         discretion reasonably, and in compliance with applicable laws).
@@ -35,7 +35,7 @@
         may be of interest to you if your requirements or circumstances change.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Guests</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Guests</button>
 <div class="collapse">
   <p>Members may bring guests to the centre provided according to their membership status.
         Members must accompany their guest at all times, and the Member who brings the guest remains responsible for their
@@ -45,7 +45,7 @@
         At all times, guests must complete a Health Commitment Statement as requested by us.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Behaviour and dress standards</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Behaviour and dress standards</button>
 <div class="collapse">
         <p>You should conduct yourself in a quiet and well-mannered fashion when in or about the centre, and in a manner that
         will not disturb or impair the use and enjoyment of the centre by any other person. In particular you may not use
@@ -68,7 +68,7 @@
         <p>Members are respectfully requested to store coats and rucksacks in the lockers provided.</p>
   </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">General</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">General</button>
 <div class="collapse">
         <p>Whilst in our club, members will be need to remain a safe distance apart from others at all times.</p>
         <p>Opening times for the centre will be prominently displayed on our website.</p>
@@ -81,7 +81,7 @@
         <p>We reserve the right to show potential Members and other individuals the facilities of a Club on a trial basis.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Rules</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Rules</button>
 <div class="collapse">
         <p>All members and guests visiting the centre must comply with these policies. These policies are incorporated
         into a Member’s Contract with us, and compliance with these policies
@@ -100,14 +100,14 @@
         Words and phrases in these policies have the same meanings as given in our Membership Terms & Conditions, unless specified otherwise.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Bookings and arrivals</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Bookings and arrivals</button>
 <div class="collapse">
         <p>Advance bookings are needed to secure places for all our classes. If you have not booked, Reception will be able
         to let you know if spaces are available.</p>
         <p>Before starting a class, you’ll need to swipe in at Reception.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Lockers</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Lockers</button>
 <div class="collapse">
         <p>Lockers are made available subject to availability. As a result of COVID-19, there will be limited lockers
         available to ensure safe, social distancing is adhered to.
@@ -118,7 +118,7 @@
         when you came to a Club.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Entrance and exists</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Entrance and exists</button>
 <div class="collapse">
         <p>You must use the main entrance when entering or leaving the premises.</p>
         <p>Fire exits, which are clearly marked, are there in the interests of safety and you must not interfere with fire
@@ -130,7 +130,7 @@
         measures.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Car parking</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Car parking</button>
 <div class="collapse">
         <p>Our car park may only be used by Members, guests, and visitors while they are on the centre premises.
         You may not leave your car in the car park at any other time (for example, you may not leave it there following
@@ -140,7 +140,7 @@
         for removal of the clamp. You must be a Blue Badge holder to park in the accessible bays in our car parks.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Health and safety</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Health and safety</button>
 <div class="collapse">
         <p>You must complete a Health Commitment Statement as requested by us before using our fitness facilities.
         You should seek instruction before using unfamiliar equipment.
@@ -154,7 +154,7 @@
         narcotics, tranquilizers or any medication or other substance which may affect your ability to exercise safely.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Group exercise classes</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Group exercise classes</button>
 <div class="collapse">
       <p>You must pre-book classes to ensure your participation in them.
         If you can no longer attend a pre-booked session, you must cancel your booking online via our app or website or
@@ -168,7 +168,7 @@
         An instructor may, at any time, ask you to leave a class if you are risking the safety or enjoyment of others.</p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Swimming pool and spa area</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Swimming pool and spa area</button>
 <div class="collapse">
       <p>For reasons of health, safety and hygiene you must:
       <ul>
@@ -202,7 +202,7 @@
       </p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">COVID-19 Additional measures – Swimming pool and spa</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">COVID-19 Additional measures – Swimming pool and spa</button>
 <div class="collapse">
         <p><ol>
               <li>Family swim times will be from 9-6pm in selected clubs only with separate children’s pools.</li>
@@ -215,7 +215,7 @@
       </ol></p>
 </div>
 <br>
-<button type="button" class="collapsible" style="display:block;">Photography and Video</button>
+<button type="button" class="btn btn-1 collapsible" style="display:block;">Photography and Video</button>
 <div class="collapse">
       <p>You must respect the rights of other members when taking photos or video in other areas of the club by not
       intentionally taking photos or videos of others. You will be requested to delete them if challenged.
