--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -11,7 +11,7 @@
 <div class="text-center">
 
 <main class="form-signin">
-  <form>
+  <form method="POST" action="{{ url_for('login') }}">>
     <img class="mb-4" src="/static/logo.png" alt="GymFitnessLogo" width="100" height="100">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
