--- a/application/static/main.css
+++ b/application/static/main.css
@@ -290,8 +290,6 @@ label {
 .form-container {
 margin: auto;
   width: 60%;
-  border: 3px solid #73AD21;
+  border: 3px outset;
   padding: 10px;
 }
-
-
