--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>{{ title }}</title>
+
     <!--    Google fonts  -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
@@ -23,7 +24,7 @@
 <div class="navigation">
 <header>
 
-<nav class="navbar navbar-expand-lg fixed-top">
+<nav class="navbar navbar-expand-lg mb-5">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{url_for('home')}}">
          <img src="static/images/pf_logo.jpg" alt="" width="60" height="60" class=" d-none d-md-inline-block align-text-center">
@@ -60,15 +61,23 @@
 
 </header>
 </div>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class=flashes style="text-align: center;">
+                {% for msg in messages %}
+                    <h3>{{ msg }}</h3>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
 
 {%block body_content%}
-
 
 {%endblock%}
 
 
 {%block footer%}
-<nav class="navbar footer">
+<nav class="navbar footer mt-5 fixed-bottom">
   <div class="container-fluid">
       <div class="social-media">
       <ul>
