--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -11,8 +11,8 @@
 <div class="text-center">
 
 <main class="form-signin">
-  <form method="POST" action="{{ url_for('login') }}">>
-    <img class="mb-4" src="/static/logo.png" alt="GymFitnessLogo" width="100" height="100">
+  <form method="POST" action="{{ url_for('login') }}">
+    <img class="mb-4" src="/static/images/pf_logo.jpg" alt="GymFitnessLogo" width="100" height="100">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
@@ -33,7 +33,7 @@
     <button class="btn btn-primary" type="submit">Login</button>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Don’t have an account? <a class="ml-2" href="{{ url_for('login') }}">Register here</a>
+            Don’t have an account? <a class="ml-2" href="{{ url_for('register') }}">Register here</a>
         </small>
     </div>
     <p class="mt-5 mb-3 text-muted">&copy; Gym Fitness 2021</p>
