--- a/application/templates/change_password.html
+++ b/application/templates/change_password.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
 
-{{ url_for('templates', filename='login.html') }}
+{{ url_for('templates', filename='change_password.html') }}
 
-{% block title %}Login{% endblock %}
+
+{% block title %}Change Password{% endblock %}
 
 {% block body_content %}
 <head>
@@ -10,27 +11,25 @@
 </head>
 <div class="text-center">
 
+    <h1>Change Password</h1>
+    {{ password_template|safe }}
+
 <main class="form-signin">
-  <form method="POST" action="{{ url_for('login') }}">
+  <form method="POST" action="{{ url_for('change_password') }}">
     <img class="mb-4" src="/static/images/pf_logo.jpg" alt="GymFitnessLogo" width="100" height="100">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
       {{ form.hidden_tag() }}
-              {{ form.email.label }} {{ form.email(placeholder="example@getfit.com") }}
+              {{ form.password.label }} {{ form.password }}
               <br>
     </div>
     <div class="form-floating">
-      {{ form.password.label }} {{ form.password }}
+      {{ form.confirm_password.label }} {{ form.confirm_password }}
               <br>
     </div>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="btn btn-primary" type="submit">Login</button>
+    <button class="btn btn-primary" type="submit">Save</button>
     <div class="border-top pt-3">
         <small class="text-muted">
             Don’t have an account? <a class="ml-2" href="{{ url_for('register') }}">Register here</a>
