--- a/application/templates/dashboard.html
+++ b/application/templates/dashboard.html
@@ -1,10 +1,84 @@
 {% extends "layout.html" %}
 
 {{ url_for('templates', filename='dashboard.html') }}
+<head>
 
-{% block title %}Dashboard{% endblock %}
+    {% block title %}Dashboard{% endblock %}
+
+    <!-- Loading Icons From Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+      <!-- Loading Roboto Font from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <!-- Loading Open Sans Font from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="members.css">
+
+
+</head>
+
 
 {% block body_content %}
+
+<div class="container fixed-top">
+    <div class="row">
+        <!-- Quote Box -->
+        <div class="block text-center">
+
+            <!-- Front part of the Quote Box -->
+            <div class="quote-box block__main block__front">
+
+                <!-- Quote to be Displayed Here -->
+                <span class="quote">
+
+                    <!-- Hyphen is Displayed  -->
+                    <i class="fas fa-2x fa-quote-left"></i>
+
+                    <!-- Quote Text -->
+                    <span class="text">
+                        "All that you see out infront of you, is what you see displayed in your head"
+                    </span>
+
+                </span>
+
+                <!-- Author to be Displayed Here -->
+                <div class="author">
+                    Alan Watts
+                </div>
+                <a class="new-quote btn btn-default" onclick="newQuote()">New Quote</a>
+            </div>
+
+            <!-- Back Part of the Quote Box -->
+            <div class="quote-box block__main block__back">
+
+                <!-- Quote to be Displayed Here -->
+                <span class="quote">
+
+                    <!-- Hyphen is Displayed  -->
+                    <i class="fas fa-2x fa-quote-left"></i>
+
+                    <!-- Quote Text -->
+                    <span class="text">
+                        "The only way to make sense out of change is to plunge into it, move with it, and join the
+                        dance"
+                    </span>
+
+                </span>
+
+                <!-- Author to be Displayed Here -->
+                <div class="author">
+                    Alan Watts
+                </div>
+                <!-- Button -->
+                <a class="new-quote btn btn-default " onclick="newQuote()">New Quote</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <h2>Book a Class</h2>
 <br>
     <a href="{{ url_for('booking') }}">
@@ -16,6 +90,6 @@
     <a href="{{ url_for('my_bookings') }}">
    <button>My Bookings</button>
 </a>
-
+<script src="{{url_for ('static', filename='member.js')}}"></script>
 
 {% endblock %}
