--- a/application/static/dashboard.css
+++ b/application/static/dashboard.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap');
 
-body{background-color:rgba(0, 136, 169, 0.5);
+body{background-color:#fff;
 font-family: 'Montserrat', sans-serif;
 
 }
@@ -8,8 +8,8 @@ font-family: 'Montserrat', sans-serif;
 
 /*headings starts*/
 h1,h2,h3,h4,h5{
-font-weight:500;
-color:#fff;
+font-weight:700;
+color:#24252A;
 
 }
 
@@ -17,13 +17,13 @@ color:#fff;
 
 
 /*navbar toggler start*/
-.navbar-toggler{background-color: rgba(0, 136, 169, 1);
+.navbar-toggler{background-color:#0096c7;
 border:none;
 padding:10px 6px;
 outline:none;}
 
 .navbar-toggler:hover{
-background-color: rgba(0, 136, 169, 0.8);
+background-color:rgba(0, 150, 199, 3);
 }
 
 .navbar-toggler span{
@@ -54,19 +54,20 @@ background-color: rgba(0, 136, 169, 0.8);
 
 /*navbar toggler end*/
 
-/*login button start*/
+/*logout button start*/
 .btn{
 margin-left: 20px;
 padding: 9px 25px;
-background-color: rgba(0, 136, 169, 1);
+background-color:#0096c7;
 border: none;
 border-radius: 50px;
 cursor:pointer;
 transition: all 0.3s ease 0s;
+color:#fff
 }
 
 .btn:hover {
-background-color: rgba(0, 136, 169, 0.8);
+background-color: rgba(0, 150, 199, 3);
 
 
 }
@@ -75,7 +76,7 @@ background-color: rgba(0, 136, 169, 0.8);
 
 /*navbar and links start*/
 .navbar{
-background-color: #24252A};
+background-color: #90e0ef};
 
 .navbar-toggler span + span + span{
 
@@ -86,10 +87,10 @@ background-color: #24252A};
 }
 
 .navbar-expand-lg .navbar-nav .nav-link{
-    font-weight:500
+    font-weight:700
     font-size:16px;
     position:relative;
-    color:#ECF0F1;
+    color:#24252A;
     text-decoration: none;
 }
 
@@ -106,7 +107,7 @@ background-color: #24252A};
 
 .navbar .navbar-brand{
 text-decoration:none;
-color:rgba(0, 136, 169, 1);
+color:#24252A;
 font-size:24px;
 }
 
@@ -294,3 +295,102 @@ margin: auto;
   padding: 10px;
 }
 
+.quote-container{
+height: 20vh;
+width:100%;
+background-image: linear-gradient(to right bottom, #ed4264a8, #ffedbca8);
+background-size:cover;
+background-repeat:no-repeat;
+transition: 0.5s;
+transition-timing-function: ease-in;
+
+}
+
+.new-quote{
+      font-size:15px;
+      border-radius: 50px;
+      cursor:pointer;
+      padding-bottom: 8px;
+      padding-top: 9px;
+      margin-top: 5px;
+      background-image: linear-gradient(to right bottom, #ed4264a8, #ffedbca8);
+
+  }
+
+ .text{
+    font-size:30px;
+    padding-left:10px;
+    transition: 0.5s;
+    transition-timing-function: ease-in;
+    font-family: 'Roboto', sans-serif;
+    background-image: linear-gradient(to right bottom, #ed4264a8, #ffedbca8);
+
+    -webkit-background-clip: text;
+  }
+
+  .author{
+    margin:10px;
+    font-size:20px;
+    transition: 0.5s;
+    transition-timing-function: ease-in;
+    font-family: 'Open Sans Condensed', sans-serif;
+    background-image: linear-gradient(to right bottom, #28313B,#485461
+    );
+    color: transparent;
+    -webkit-background-clip: text;
+  }
+
+.block__main{
+transition: all .8s ease;
+    backface-visibility: hidden;
+
+    border-radius: .5rem;
+    position:absolute;
+}
+  .block__back {
+    transform: rotateY(180deg);
+  }
+
+.rotateF{
+  transform: rotateY(-180deg);
+}
+
+.rotateB{
+  transform: rotate(0deg);
+}
+
+
+
+#upgrade-btn{
+background-color:#fff;
+font-weight:600;
+color:#e76f51;
+border: transparent;
+border-radius:10px;
+padding:10px 100px 10px 100px;
+
+
+}
+#upgrade{background-color:#0096c7;
+padding:15px 30px 15px 30px;
+border-radius:10px;
+}
+
+.dashboard-item{
+border:1px outset;
+box-shadow:rgba(0,0,0,0.3);
+border-radius:50px;
+margin:auto;
+padding:20px 20px;
+margin-top:20px;
+margin-bottom:20px;
+}
+
+.member-benefit{
+border:1px outset;
+box-shadow:rgba(0,0,0,0.3);
+border-radius:50px;
+margin:auto;
+padding:20px 20px;
+
+}
