--- a/application/static/quote.css
+++ b/application/static/quote.css
@@ -1,4 +1,3 @@
-/*styling for qoute generator*/
 
 *{
     margin:0;
@@ -14,10 +13,11 @@ body{
   }
 
   .quote-box{
-    padding:3rem;
+    padding:23px;
     transition: 0.5s;
     transition-timing-function: ease-in;
   }
+
 
   .text{
     font-size:30px;
@@ -34,6 +34,7 @@ body{
     transition: 0.5s;
     transition-timing-function: ease-in;
   }
+
 
   .new-quote{
       font-size:15px;
@@ -92,7 +93,7 @@ p{
   }
 
   .blockback {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
   }
 
 .rotateF{
