--- a/application/templates/logged_layout.html
+++ b/application/templates/logged_layout.html
@@ -15,7 +15,7 @@
     <!--    Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
    <!--    css stylesheet -->
-    <link rel="stylesheet" href="{{url_for ('static', filename='main.css')}}">
+    <link rel="stylesheet" href="{{url_for ('static', filename='dashboard.css')}}">
 
 </head>
 
@@ -39,20 +39,20 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">HOME</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('profile') }}">PROFILE</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about">ABOUT US</a>
+          <a class="nav-link" aria-current="page" href="{{ url_for('dashboard') }}">DASHBOARD</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('book') }}" >BOOK A CLASS</a>
+          <a class="nav-link" href="{{ url_for('booking') }}" >BOOK A CLASS</a>
         </li>
 
       </ul>
         <ul class="navbar-nav ms-auto">
 
-        <button id="login-btn" type="button" class="btn navbar-nav ms-auto" onClick="location.href='{{ url_for('login') }}';">LOGIN </button>
+        <button id="login-btn" type="button" class="btn navbar-nav ms-auto" onClick="location.href='{{ url_for('logout') }}';">LOGOUT </button>
 
         </ul>
 
@@ -62,17 +62,11 @@
 
 </header>
 </div>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                <ul class=flashes style="text-align: center;">
-                {% for msg in messages %}
-                    <h3>{{ msg }}</h3>
-                {% endfor %}
-                </ul>
-            {% endif %}
-        {% endwith %}
+
 
 {%block body_content%}
+
+<p>Welcome back, {{ username }}!</p>
 
 {%endblock%}
 
@@ -121,13 +115,7 @@
 {%endblock%}
 
 
-<script>
-<!--    let login=document.getElementById("loginbtn");-->
-<!--    function openLogin(){-->
-<!--    location.href="{{url_for('login')}}";}-->
-</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
 
 </body>
 
