--- a/application/templates/dashboard.html
+++ b/application/templates/dashboard.html
@@ -22,13 +22,13 @@
 
 
 {% block body_content %}
-<div class="container-fluid quote-container" >
+<div class="container-fluid quote-container " >
     <div class="row justify-content-center text-align-center">
 
 
-
+<h1>{{user}} </h1>
         <!-- Quote Box -->
-        <div class="block text-center">
+        <div class="block text-box text-center text-align-center">
 
             <!-- Front part of the Quote Box -->
             <div class="quote-box block__main block__front">
@@ -50,7 +50,7 @@
                 <div class="author">
                     Alan Watts
                 </div>
-                <a class="new-quote btn btn-default"  onclick="newQuote()">New Quote</a>
+
             </div>
 
             <!-- Back Part of the Quote Box -->
@@ -75,7 +75,7 @@
                     Alan Watts
                 </div>
                 <!-- Button -->
-                <a class="new-quote btn btn-default " onclick="newQuote()">New Quote</a>
+
             </div>
         </div>
 
