--- a/application/templates/logged_layout.html
+++ b/application/templates/logged_layout.html
@@ -28,7 +28,8 @@
 <nav class="navbar navbar-expand-lg mb-5">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{url_for('home')}}">
-         <img src="static/images/pf_logo.jpg" alt="" width="60" height="60" class=" d-none d-md-inline-block align-text-center">
+
+         <img src="static/images/Logo_dashboard.png" alt="" width="60" height="60" class=" d-none d-md-inline-block align-text-center">
       Pure Fitness</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
